--- a/DriverApp/app/src/main/AndroidManifest.xml
+++ b/DriverApp/app/src/main/AndroidManifest.xml
@@ -15,6 +15,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="hanaviewers.DispatchLoginPage"
+                  android:label="@string/app_name"></activity>
+
+        <activity android:name="hanaviewers.FloristLoginPage"
+                  android:label="@string/app_name"></activity>
+
+        <activity android:name="hanaviewers.Trips"
+                  android:label="@string/app_name"></activity>
+
+        <activity android:name="hanaviewers.CaptureDesignImage"
+                  android:label="@string/app_name"></activity>
+
     </application>
 
 </manifest>
